[project]
name = "cs602-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "folium>=0.14.0",
    "streamlit-folium>=0.15.0",
    "plotly>=5.17.0",
    "geopy>=2.4.0",
    "requests>=2.31.0",
    "python-dotenv"
]
